# django-drf-sse

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
api/: urls.py
config/: celery.py  settings.py  urls.py
sse/: pyproject.toml
sse/config/: settings.py
sse/templates/: index.html  index_update_state.html
sse/web/: tasks.py  urls.py  views.py
templates/: index.html  index_update_state.html
web/: tasks.py  urls.py
