[tool.poetry]
name = "django-drf-sse"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
daphne = "^4.1.2"
celery = "^5.4.0"
django-celery-results = "^2.5.1"
gevent = "^24.2.1"
django-extensions = "^3.2.3"
django-redis = "^5.4.0"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
